# org-defuddle

./: README.org  org-defuddle.el
.github/workflows/: release.yml
crates/org-defuddle-cli/: Cargo.toml
crates/org-defuddle-cli/src/: main.rs
crates/org-defuddle-core/: Cargo.toml
crates/org-defuddle-core/src/: lib.rs
crates/org-defuddle-core/tests/: upstream_fixtures.rs
crates/org-defuddle-module/: Cargo.toml
crates/org-defuddle-module/src/: lib.rs
scripts/: defuddle-reference.mjs
test/: org-defuddle-test.el
tests/expected-org/: callouts--obsidian-publish-callouts.org  codeblocks--code-pre-nesting.org  codeblocks--rehype-pretty-copy.org  comments--mastodon.social-@user-12345678.org  comments--news.ycombinator.com-item-id=12345678.org  comments--old.reddit.com-r-test-comments-abc123-test_post.org  content-patterns--iso-date-and-read-time.org  elements--lazy-image.org  elements--lightbox-image-dedup.org  entry-point--js-article-content.org  extractor--chatgpt-citations.org  extractor--chatgpt-post-thought-content.org  footnotes--inline-footnote-span.org  footnotes--pulldown-cmark-footnote-definition.org  footnotes--sidenote-inline-with-list.org  footnotes--span-fnref-colon.org  footnotes--wikipedia-references.org  general--12gramsofcarbon.com-p-ilyas-30-papers-to-carmack-vlaes.org  general--daringfireball.net-2025-02-the_iphone_16e.org  general--github.com-issue-56.org  general--github.com-test-owner-test-repo-pull-42.org  general--lesswrong.com-s-N7nDePaNabJdnbXeE-p-vJFdjigzmcXMhNTsx.org  general--news.ycombinator.com-item-id=12345678.org  (+27 more)
