[package]
name = "org-defuddle-cli"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "org-defuddle"
path = "src/main.rs"

[dependencies]
encoding_rs = "0.8"
org-defuddle-core = { path = "../org-defuddle-core" }
serde_json = "1.0"
ureq = "2.12"
url = "2.5"
