[package]
name = "org-defuddle-module"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
emacs = "0.19"
org-defuddle-core = { path = "../org-defuddle-core" }
serde_json = "1.0"

